--- a/index.html
+++ b/index.html
@@ -167,8 +167,7 @@
                         <img src="img/uber_demand.png">
                         <div class="card-body">
                             <h6> Spatio-temporal Forcasting Model of NYC's Uber Demand</h6>
-                            <p> A exploration of NYC's Uber demand pattern. Compare the effectiveness of different types of features to see
-                                when and where does it make the model different. </p>
+                            <p> An exploration of NYC's Uber demand pattern. Compare how different types of features impact the model to see when and where differences occur. </p>
                             <div>
                                 <span>R </span>
                             </div>
