--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                                 <span>R</span>
                                 <span>Multilinear Regression</span>
                                 <span>Figma</span>
+                                <u id='link-509'><i class="fab fa-github"></i> Github Repo</u>
                             </div>
                         </div>
                     </a>
@@ -131,7 +132,7 @@
                             <p>
                                 A project utilizes logistic modeling to predict the violation of private car plate restriction
                                 in Mexico City Metropolitan Area by 2017 Travel Survey, Intercensal, and crime-related data. This document
-                                intends to visualize the key finding of the forcasting. 
+                                intends to visualize the key finding of the forecasting. 
                             </p>
                             <div>
                                 <span>R </span>
@@ -222,9 +223,10 @@
                         <img src="img/studio3.png">
                         <div class="card-body">
                             <h6> Resillent Development Plan for Poplar Point, DC</h6>
-                            <p> To tackle the potential flooding damaging as well as the negative externalities that may accompany development,
-                                we propose a possiblity to achive a resillient Poplar Point. My contribution involves
-                                graphic design, proposals of transportation and housing related built environment and policies.</p>
+                            <p> Considering the potential flooding damage as well as the negative externalities that may accompany development, 
+                                we proposed two scenarios to achieve a resilient Poplar Point socially, economically, and environmentally.
+                                 My contribution involves graphic design, transportation, housing and commercial related built environment and policies proposals.
+                            </p>
                             <div>
                                 <span></span>
                                 <span>Transportation Planning</span>
@@ -267,13 +269,10 @@
         </div>
       <!-- About Section Content -->
         <div class="col-sm-7" style="color:white; width=100%; font-size:20px">
-            <span>Majoring in City Planning at University of Pennsylvania with the concentrating on Urban Spatial Analytics and Transportation Planning.
-                I have a great passion for applying my statistical and geographic analysis skills to identify urban issues from
-                 chaos of data to support efficient and intelligent decision-making.
-                 <br><br>
-                 I enjoy communicating with types of stakeholders and empathizing with their problems to deliver user-centric,
-                 creative, and feasible solutions. Having studied in China, the UK, and the US, as well as interning in the technical, real estate, and landscaping fields, I’m able to learn faster, think deeper, and take initiative to execute to achieve the goals.
-               </span>
+            <p>Majoring in City Planning at University of Pennsylvania with the focus on Urban Spatial Analytics and Transportation Planning. I have a great passion for applying my statistical and geographic analysis skills to support efficient and intelligent decision-making, as well as making cities more equitable and livable. I enjoy communicating with types of stakeholders and empathizing with their problems to deliver user-centric, creative, and feasible solutions.
+                <br><br>
+                My experiences studying in China, the UK, and the US, as well as interning in tech (@Wechat, Tencent @DiDi @Amap, Alibaba), real estate (@Cushman & Wakefield), and landscaping (@Shanghai Tianhua) fields allow me to learn faster, think deeper and take initiative to accomplish the goals.
+            </p>
          </div>
       </div>
     </div>
@@ -281,7 +280,7 @@
   </section>
 
 
-    <footer style="margin-top:-8%; z-index=100;">
+    <footer style="margin-top:0%; z-index=100;">
         <p class="text-muted text-white-50 fs-3 contacts">
             <a href="mailto:jing321@upenn.edu" class="text-reset px-1"> <i class="fas fa-envelope"></i></a>
             <a href="https://www.linkedin.com/in/jing-zhang-871b091a3/" class="text-reset px-1"> <i
