--- a/index.html
+++ b/index.html
@@ -110,10 +110,9 @@
                         <img src="img/crime1.png">
                         <div class="card-body">
                             <h6> Crime Prediction (Georisk) in Chicago</h6>
-                            <p> A methodology to predict crime and imply reasonable policing allocation in Chicago,
-                                with the highlight of potential crime's explicit geospatial risk (e.g. built environment) to counter the severe bias
-                                in current crime data and main streaming forcasting algorithm.
-                                The model enable efficient and equial policing possible.  </p>
+                            <p> Methodology to forecast crime and imply reasonable policing allocation in Chicago, with a highlight on potential criminal explicit geospatial risk (e.g., built environment) 
+                                to counter the severe bias in current crime data and mainstream forecasting algorithms. 
+                                This model can help improve the efficiency and equity of police work. </p>
                             <div>
                                 <span>R</span>
                                 <span>Moran's I</span>
