--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                         <img src="img/occupancy.gif">
                         <div class="card-body">
                             <h6> Forecast Train Ridership & Wireframe Design </h6>
-                            <p>
-                                An analysis tool(wireframe) for train operators and transportation planners
-                                to explore how ridership will change in various conditions (e.g., weather,
-                                holidays, train intervel, trian capacity, etc.) based on a robust profit-oriented forecast model to support efficient and intelligent decision making.
+                            <p>An analysis tool(wireframe) for train operators and transportation planners to explore how ridership will change in various conditions 
+                                (e.g., weather, holidays, train interval, train capacity, etc.) based on a robust profit-oriented forecast model to support efficient 
+                                and intelligent decision making.
+           
                             </p>
                             <div>
                                 <span>R</span>
